updating to use parent BOM release from Maven Central